--- a/dashboard/mainPage.html
+++ b/dashboard/mainPage.html
@@ -34,9 +34,9 @@
     <h2 class="text-lg font-semibold text-gray-700 mb-4">Kinerja Pembelajaran</h2>
     <div class="flex flex-col items-center space-y-4">
       <div class="relative w-40 h-40 flex items-center justify-center flex-shrink-0">
-        <div class="donut-chart"></div>
+        <div class="donut-chart" id="ipk-donut"></div>
         <div class="absolute flex flex-col items-center justify-center">
-          <span class="text-4xl font-bold text-blue-900">3.4</span>
+          <span class="text-4xl font-bold text-blue-900" id="main-page-ipk-value">Memuat...</span>
           <span class="text-xs text-gray-500">/ 4.00</span>
         </div>
       </div>
@@ -44,15 +44,15 @@
       <div class="flex flex-col md:flex-row justify-around w-full gap-4">
         <div class="bg-white p-4 rounded-lg shadow-sm flex-1 text-center border border-gray-300">
           <div class="text-xs text-gray-500">Semester</div>
-          <div class="text-2xl font-bold text-gray-800">6</div>
+          <div class="text-2xl font-bold text-gray-800" id="main-page-semester">Memuat...</div>
         </div>
         <div class="bg-white p-4 rounded-lg shadow-sm flex-1 text-center border border-gray-300">
           <div class="text-xs text-gray-500">Tahun Akademik</div>
-          <div class="text-2xl font-bold text-gray-800">2025/2026</div>
+          <div class="text-2xl font-bold text-gray-800" id="main-page-tahun-akademik">Memuat...</div>
         </div>
         <div class="bg-white p-4 rounded-lg shadow-sm flex-1 text-center border border-gray-300">
           <div class="text-xs text-gray-500">SKS</div>
-          <div class="text-2xl font-bold text-gray-800">126</div>
+          <div class="text-2xl font-bold text-gray-800" id="main-page-sks">Memuat...</div>
         </div>
       </div>
     </div>
