--- a/dashboard/Ujian dan Nilai/kartu_hasil_studi.html
+++ b/dashboard/Ujian dan Nilai/kartu_hasil_studi.html
@@ -15,7 +15,13 @@
             <p>Jenjang Studi: <span id="jenjang-studi-khs" class="font-semibold">Memuat...</span></p>
         </div>
 
-        <div id="semester-container" class="space-y-8">
+        <div class="flex items-center mb-6">
+            <label for="semester-select" class="text-gray-700 font-semibold mr-4">Pilih Semester:</label>
+            <select id="semester-select" class="bg-gray-100 border border-gray-300 rounded-lg px-3 py-1 text-sm focus:outline-none focus:ring-2 focus:ring-blue-200">
+                </select>
+        </div>
+
+        <div id="semester-card-container">
             </div>
     </div>
 </main>
