update css vanila

--- a/dashboard/profile.html
+++ b/dashboard/profile.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profil - Institut Widya Pratama</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <main class="flex-1 flex flex-col p-4 md:p-6 lg:p-8">
   <header class="flex justify-between items-center mb-6">
