--- a/dashboard/mainPage.html
+++ b/dashboard/mainPage.html
@@ -5,16 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Beranda - Institut Widya Pratama</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    .donut-chart {
-      width: 100%;
-      height: 100%;
-      border-radius: 50%;
-      background: conic-gradient(#0b66a5 0% 70%, #f0b341 70% 100%);
-      mask: radial-gradient(farthest-side, transparent 60%, white 60%);
-      -webkit-mask: radial-gradient(farthest-side, transparent 60%, white 60%);
-    }
-  </style>
+  <link rel="stylesheet" href="/styles.css">
 </head>
 <body class="bg-gray-50 min-h-screen flex flex-col font-sans">
   <div class="flex flex-1 min-h-0 flex-col md:flex-row">
@@ -28,7 +19,6 @@
           </button>
         </div>
       </header>
-
       <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
   <section class="bg-white p-6 rounded-lg shadow-md border border-gray-300">
     <h2 class="text-lg font-semibold text-gray-700 mb-4">Kinerja Pembelajaran</h2>
@@ -57,7 +47,6 @@
       </div>
     </div>
   </section>
-
   <div class="space-y-6">
     <section class="bg-white p-6 rounded-lg shadow-md border border-gray-300">
       <div class="flex justify-between items-center mb-4">
@@ -79,7 +68,6 @@
         </div>
       </div>
     </section>
-
     <section class="bg-white p-6 rounded-lg shadow-md border border-gray-300">
       <div class="flex justify-between items-center mb-4">
         <h2 class="text-lg font-semibold text-gray-700">Pesan Pribadi</h2>
@@ -87,7 +75,6 @@
       <p class="text-sm text-gray-500 italic">Tidak ada data</p>
     </section>
   </div>
-
   <section class="bg-white p-6 rounded-lg shadow-md mt-6 md:col-span-2 border border-gray-300">
     <h2 class="text-lg font-semibold text-gray-700 mb-4">QUOTE OF THE DAY</h2>
     <p class="text-base text-gray-800">
