--- a/lupa_sandi.html
+++ b/lupa_sandi.html
@@ -5,20 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Lupa Kata Sandi - SIAKAD Institut Widya Pratama Pekalongan</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="/styles.css">
 </head>
 <body class="min-h-screen bg-blue-500 flex items-center justify-center">
-
   <div class="w-full max-w-sm sm:max-w-md md:max-w-xl bg-white/80 rounded-xl shadow-xl p-4 sm:p-8 z-10 mt-6 sm:mt-8 mx-2">
-    <!-- Logo dan Heading -->
     <div class="flex flex-col items-center mb-6">
       <img src="assets/logo.png" alt="Logo IWMP" class="w-12 sm:w-16 md:w-20 mb-2" />
     </div>
-    <!-- Instruksi -->
     <p class="text-gray-900 mb-6 font-medium text-xs sm:text-sm text-center">
       Password baru akan dikirim ke email Anda.<br>
       Masukkan <span class="font-semibold">ID</span> dan <span class="font-semibold">Tanggal Lahir</span> Anda.
     </p>
-    <!-- Form -->
     <form>
       <div class="mb-5">
         <label for="userid" class="block text-gray-700 font-semibold text-xs sm:text-sm mb-1">ID Pengguna</label>
@@ -30,7 +27,6 @@
         <div class="flex gap-2">
           <select class="px-2 py-1 border border-gray-300 rounded-lg text-xs sm:text-sm focus:ring-blue-200" required>
             <option value="">Tanggal</option>
-            <!-- Tanggal -->
             <script>
               for(let i=1;i<=31;i++){document.write('<option>'+i+'</option>')}
             </script>
