--- a/dashboard/Ujian dan Nilai/jadwalUjian.html
+++ b/dashboard/Ujian dan Nilai/jadwalUjian.html
@@ -1,110 +1,65 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jadwal Ujian</title>
-    </head>
-<body class="bg-gray-50 text-gray-800 p-5 font-sans">
-
-    <div class="mx-auto max-w-full lg:max-w-6xl">
-        <h1 class="text-2xl font-bold mb-6 text-gray-900"> Jadwal Ujian</h1>
-
-        <div class="bg-white p-6 md:p-8 rounded-xl shadow-lg mb-8">
-            <h2 class="text-xl font-semibold mb-4 border-b pb-2"> Ujian Tengah Semester (UTS)</h2>
+</head>
+<body>
+    <main class="flex-1 p-4 md:p-6 lg:p-8">
+    <h1 class="text-xl md:text-2xl font-bold mb-6 text-gray-900">Jadwal Ujian</h1>
+    
+    <div class="space-y-8">
+        <div class="bg-white p-6 md:p-8 rounded-xl shadow-lg">
+            <h2 class="text-lg md:text-xl font-semibold mb-4 border-b pb-2">Ujian Tengah Semester (UTS)</h2>
             <div class="overflow-x-auto">
                 <table class="w-full text-sm text-left text-gray-700">
-                    <thead class="text-xs text-white uppercase bg-blue-600 rounded-t-lg">
+                    <thead class="text-xs text-white uppercase bg-blue-600">
                         <tr>
-                            <th scope="col" class="py-3 px-4 rounded-tl-lg">Tanggal</th>
-                            <th scope="col" class="py-3 px-4">Hari</th>
-                            <th scope="col" class="py-3 px-4">Mulai</th>
-                            <th scope="col" class="py-3 px-4">Selesai</th>
-                            <th scope="col" class="py-3 px-4">Ruangan</th>
-                            <th scope="col" class="py-3 px-4">Mata Kuliah</th>
-                            <th scope="col" class="py-3 px-4">Kelas</th>
-                            <th scope="col" class="py-3 px-4">Dosen</th>
-                            <th scope="col" class="py-3 px-4">No. Kursi</th>
-                            <th scope="col" class="py-3 px-4 rounded-tr-lg">Soal</th>
+                            <th scope="col" class="py-3 px-4 rounded-tl-lg whitespace-nowrap">Tanggal</th>
+                            <th scope="col" class="py-3 px-4 whitespace-nowrap">Hari</th>
+                            <th scope="col" class="py-3 px-4 whitespace-nowrap">Mulai</th>
+                            <th scope="col" class="py-3 px-4 whitespace-nowrap">Selesai</th>
+                            <th scope="col" class="py-3 px-4 whitespace-nowrap">Ruangan</th>
+                            <th scope="col" class="py-3 px-4 whitespace-nowrap">Mata Kuliah</th>
+                            <th scope="col" class="py-3 px-4 whitespace-nowrap">Kelas</th>
+                            <th scope="col" class="py-3 px-4 whitespace-nowrap">Dosen</th>
+                            <th scope="col" class="py-3 px-4 whitespace-nowrap">No. Kursi</th>
+                            <th scope="col" class="py-3 px-4 rounded-tr-lg whitespace-nowrap">Soal</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr class="bg-white border-b hover:bg-gray-50">
-                            <td class="py-3 px-4 whitespace-nowrap"></td>
-                            <td class="py-3 px-4"></td>
-                            <td class="py-3 px-4"></td>
-                            <td class="py-3 px-4"></td>
-                            <td class="py-3 px-4"></td>
-                            <td class="py-3 px-4"></td>
-                            <td class="py-3 px-4"></td>
-                            <td class="py-3 px-4"></td>
-                            <td class="py-3 px-4"></td>
-                            <td class="py-3 px-4"></td>
-                        </tr>
-                        <tr class="bg-white border-b hover:bg-gray-50">
-                            <td class="py-3 px-4 whitespace-nowrap"></td>
-                            <td class="py-3 px-4"></td>
-                            <td class="py-3 px-4"></td>
-                            <td class="py-3 px-4"></td>
-                            <td class="py-3 px-4"></td>
-                            <td class="py-3 px-4"></td>
-                            <td class="py-3 px-4"></td>
-                            <td class="py-3 px-4"></td>
-                            <td class="py-3 px-4"></td>
-                            <td class="py-3 px-4"></td>
-                        </tr>
-                        </tbody>
+                    <tbody id="uts-table-body">
+                        <tr><td colspan="10" class="text-center py-4 text-gray-500">Memuat jadwal...</td></tr>
+                    </tbody>
                 </table>
             </div>
         </div>
-
+        
         <div class="bg-white p-6 md:p-8 rounded-xl shadow-lg">
-            <h2 class="text-xl font-semibold mb-4 border-b pb-2">Ujian Akhir Semester (UAS)</h2>
+            <h2 class="text-lg md:text-xl font-semibold mb-4 border-b pb-2">Ujian Akhir Semester (UAS)</h2>
             <div class="overflow-x-auto">
                 <table class="w-full text-sm text-left text-gray-700">
-                    <thead class="text-xs text-white uppercase bg-blue-600 rounded-t-lg">
+                    <thead class="text-xs text-white uppercase bg-blue-600">
                         <tr>
-                            <th scope="col" class="py-3 px-4 rounded-tl-lg">Tanggal</th>
-                            <th scope="col" class="py-3 px-4">Hari</th>
-                            <th scope="col" class="py-3 px-4">Mulai</th>
-                            <th scope="col" class="py-3 px-4">Selesai</th>
-                            <th scope="col" class="py-3 px-4">Ruangan</th>
-                            <th scope="col" class="py-3 px-4">Mata Kuliah</th>
-                            <th scope="col" class="py-3 px-4">Kelas</th>
-                            <th scope="col" class="py-3 px-4">Dosen</th>
-                            <th scope="col" class="py-3 px-4">No. Kursi</th>
-                            <th scope="col" class="py-3 px-4 rounded-tr-lg">Soal</th>
+                            <th scope="col" class="py-3 px-4 rounded-tl-lg whitespace-nowrap">Tanggal</th>
+                            <th scope="col" class="py-3 px-4 whitespace-nowrap">Hari</th>
+                            <th scope="col" class="py-3 px-4 whitespace-nowrap">Mulai</th>
+                            <th scope="col" class="py-3 px-4 whitespace-nowrap">Selesai</th>
+                            <th scope="col" class="py-3 px-4 whitespace-nowrap">Ruangan</th>
+                            <th scope="col" class="py-3 px-4 whitespace-nowrap">Mata Kuliah</th>
+                            <th scope="col" class="py-3 px-4 whitespace-nowrap">Kelas</th>
+                            <th scope="col" class="py-3 px-4 whitespace-nowrap">Dosen</th>
+                            <th scope="col" class="py-3 px-4 whitespace-nowrap">No. Kursi</th>
+                            <th scope="col" class="py-3 px-4 rounded-tr-lg whitespace-nowrap">Soal</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr class="bg-white border-b hover:bg-gray-50">
-                            <td class="py-3 px-4 whitespace-nowrap"></td>
-                            <td class="py-3 px-4"></td>
-                            <td class="py-3 px-4"></td>
-                            <td class="py-3 px-4"></td>
-                            <td class="py-3 px-4"></td>
-                            <td class="py-3 px-4"></td>
-                            <td class="py-3 px-4"></td>
-                            <td class="py-3 px-4"></td>
-                            <td class="py-3 px-4"></td>
-                            <td class="py-3 px-4"></td>
-                        </tr>
-                        <tr class="bg-white border-b hover:bg-gray-50">
-                            <td class="py-3 px-4 whitespace-nowrap"></td>
-                            <td class="py-3 px-4"></td>
-                            <td class="py-3 px-4"></td>
-                            <td class="py-3 px-4"></td>
-                            <td class="py-3 px-4"></td>
-                            <td class="py-3 px-4"></td>
-                            <td class="py-3 px-4"></td>
-                            <td class="py-3 px-4"></td>
-                            <td class="py-3 px-4"></td>
-                            <td class="py-3 px-4"></td>
-                        </tr>
-                        </tbody>
+                    <tbody id="uas-table-body">
+                        <tr><td colspan="10" class="text-center py-4 text-gray-500">Memuat jadwal...</td></tr>
+                    </tbody>
                 </table>
             </div>
         </div>
     </div>
+</main>
 </body>
 </html>
