--- a/dashboard/registrasi/krs.html
+++ b/dashboard/registrasi/krs.html
@@ -9,7 +9,7 @@
 </head>
 <main class="flex-1 p-4 md:p-6 lg:p-8">
     <header class="flex justify-between items-center mb-6">
-        <h1 class="text-xl md:text-2xl font-bold text-gray-800">Registrasi Kartu Rencana Studi (KRS)</h1>
+        <h1 class="text-xl md:text-2xl font-bold text-gray-800">Kartu Rencana Studi</h1>
     </header>
     
     <div class="bg-white rounded-lg shadow-md overflow-hidden">
