--- a/dashboard/perkuliahan/detailKehadiran.html
+++ b/dashboard/perkuliahan/detailKehadiran.html
@@ -15,22 +15,8 @@
         </div>
     </header>
     
-    <div class="bg-white rounded-lg shadow-md overflow-hidden">
-        <div class="overflow-x-auto">
-            <table class="w-full text-left text-sm text-gray-500">
-                <thead class="text-xs text-white uppercase bg-blue-600 rounded-t-lg">
-                    <tr>
-                        <th scope="col" class="py-3 px-6 rounded-tl-lg">Pertemuan</th>
-                        <th scope="col" class="py-3 px-6">Tanggal</th>
-                        <th scope="col" class="py-3 px-6">Dosen</th>
-                        <th scope="col" class="py-3 px-6 rounded-tr-lg">Status</th>
-                    </tr>
-                </thead>
-                <tbody id="kehadiran-detail-table-body">
-                    <tr><td colspan="4" class="text-center py-4 text-gray-500">Memuat detail kehadiran...</td></tr>
-                </tbody>
-            </table>
-        </div>
+    <div id="detail-kehadiran-content-container" class="bg-white rounded-lg shadow-md overflow-hidden">
+        <div class="text-center py-4 text-gray-500">Memuat detail kehadiran...</div>
     </div>
 </main>
 </body>
