--- a/dashboard/perkuliahan/jadwalKuliah.html
+++ b/dashboard/perkuliahan/jadwalKuliah.html
@@ -18,28 +18,8 @@
         </div>
     </div>
     
-    <div class="bg-white p-6 md:p-8 rounded-xl shadow-lg">
-        <div class="overflow-x-auto">
-            <table class="w-full text-sm text-left text-gray-700">
-                <thead class="text-xs text-white uppercase bg-blue-600">
-                    <tr>
-                        <th scope="col" class="py-3 px-4 rounded-tl-lg whitespace-nowrap">Hari</th>
-                        <th scope="col" class="py-3 px-4 whitespace-nowrap">Jam Mulai</th>
-                        <th scope="col" class="py-3 px-4 whitespace-nowrap">Jam Selesai</th>
-                        <th scope="col" class="py-3 px-4 whitespace-nowrap">Ruang</th>
-                        <th scope="col" class="py-3 px-4 whitespace-nowrap">Kode Matkul</th>
-                        <th scope="col" class="py-3 px-4 whitespace-nowrap">Matkul</th>
-                        <th scope="col" class="py-3 px-4 whitespace-nowrap">Dosen</th>
-                        <th scope="col" class="py-3 px-4 whitespace-nowrap">Jenis</th>
-                        <th scope="col" class="py-3 px-4 whitespace-nowrap">Kelas</th>
-                        <th scope="col" class="py-3 px-4 rounded-tr-lg whitespace-nowrap">Goggle Classroom ID</th>
-                    </tr>
-                </thead>
-                <tbody id="jadwal-kuliah-table-body">
-                    <tr><td colspan="10" class="text-center py-4 text-gray-500">Memuat jadwal...</td></tr>
-                </tbody>
-            </table>
-        </div>
+    <div id="jadwal-kuliah-content-container" class="bg-white p-6 md:p-8 rounded-xl shadow-lg">
+        <div class="text-center py-4 text-gray-500">Memuat jadwal...</div>
     </div>
 </main>
 </body>
