--- a/dashboard/registrasi/kurikulum.html
+++ b/dashboard/registrasi/kurikulum.html
@@ -11,30 +11,12 @@
 </head>
 <body>
     <main class="flex-1 p-4 md:p-6 lg:p-8">
-    <header class="flex justify-between items-center mb-6">
-        <h1 class="text-xl md:text-2xl font-bold text-gray-800">Registrasi</h1>
-    </header>
-    <div class="bg-white rounded-lg shadow-md overflow-hidden">
-        <div class="p-4 md:p-6 border-b border-gray-200">
-            <h2 class="font-bold text-lg">Daftar Kurikulum</h2>
-            <p id="semester-info" class="text-sm text-gray-500 mt-1"></p>
+        <header class="flex justify-between items-center mb-6">
+            <h1 class="text-xl md:text-2xl font-bold text-gray-800">Daftar Kurikulum</h1>
+        </header>
+        <div id="kurikulum-content-container" class="bg-white rounded-lg shadow-md overflow-hidden">
+            <div class="text-center py-4 text-gray-500">Memuat data...</div>
         </div>
-        <div class="overflow-x-auto">
-            <table class="w-full text-left text-sm text-gray-500">
-                <thead class="text-xs text-white uppercase bg-blue-600 rounded-t-lg">
-                    <tr>
-                        <th scope="col" class="py-3 px-6 rounded-tl-lg">Kode Matkul</th>
-                        <th scope="col" class="py-3 px-6">Mata Kuliah</th>
-                        <th scope="col" class="py-3 px-6 text-center">SKS</th>
-                        <th scope="col" class="py-3 px-6 text-center">Grade Min</th>
-                    </tr>
-                </thead>
-                <tbody id="kurikulum-table-body">
-                    <tr><td colspan="8" class="text-center py-4 text-gray-500">Memuat data...</td></tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-</main>     
+    </main>     
 </body>
 </html>
