--- a/dashboard/Ujian dan Nilai/kartu_hasil_studi.html
+++ b/dashboard/Ujian dan Nilai/kartu_hasil_studi.html
@@ -5,20 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kartu Hasil Studi</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="/styles.css">
 </head>
-<main class="flex-1 p-4 md:p-6 lg:p-8">
+<main class="flex-1 p-4 md:p-6 lg:p-8 bg-gray-50">
     <div class="bg-white p-6 rounded-xl shadow-md">
         <h1 class="text-xl md:text-2xl font-bold mb-4 text-gray-800">Kartu Hasil Studi (KHS)</h1>
         
-        <div class="mb-4 text-sm text-gray-600">
-            <p>Program Studi: <span id="program-studi-khs" class="font-semibold">Memuat...</span></p>
-            <p>Jenjang Studi: <span id="jenjang-studi-khs" class="font-semibold">Memuat...</span></p>
+        <div class="khs-info-mobile">
+            <p class="text-4xl font-extrabold text-blue-900" id="ip-semester-value">Memuat...</p>
+            <p class="text-sm text-gray-500">IP Semester</p>
         </div>
 
-        <div class="flex items-center mb-6">
+        <div class="flex items-center justify-center md:justify-start mb-6">
             <label for="semester-select" class="text-gray-700 font-semibold mr-4">Pilih Semester:</label>
             <select id="semester-select" class="bg-gray-100 border border-gray-300 rounded-lg px-3 py-1 text-sm focus:outline-none focus:ring-2 focus:ring-blue-200">
-                </select>
+            </select>
+        </div>
+
+        <div class="mb-4 text-sm text-gray-600 khs-info-desktop">
+            <p>Program Studi: <span id="program-studi-khs" class="font-semibold">Memuat...</span></p>
+            <p>Jenjang Studi: <span id="jenjang-studi-khs" class="font-semibold">Memuat...</span></p>
         </div>
 
         <div id="semester-card-container">
