--- a/dashboard/registrasi/kmk.html
+++ b/dashboard/registrasi/kmk.html
@@ -12,32 +12,8 @@
         <h1 class="text-xl md:text-2xl font-bold text-gray-800">Kartu Mata Kuliah</h1>
     </header>
 
-    <div class="bg-white p-6 md:p-8 rounded-xl shadow-lg">
-        <h2 class="text-lg md:text-xl font-semibold mb-4 border-b pb-2">Informasi Mahasiswa dan Daftar Mata Kuliah</h2>
-        
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 text-sm text-gray-700 mb-6">
-            <p>NIM: <span id="mahasiswa-nim" class="font-semibold">Memuat...</span></p>
-            <p>Nama: <span id="mahasiswa-nama" class="font-semibold">Memuat...</span></p>
-            <p>Program Studi: <span id="mahasiswa-prodi" class="font-semibold">Memuat...</span></p>
-            <p>Jenjang Studi: <span id="mahasiswa-jenjang" class="font-semibold">Memuat...</span></p>
-            <p class="md:col-span-2">Semester: <span id="semester-sekarang" class="font-semibold">Memuat...</span></p>
-        </div>
-
-        <div class="overflow-x-auto">
-            <table class="w-full text-sm text-left text-gray-700">
-                <thead class="text-xs text-white uppercase bg-blue-600">
-                    <tr>
-                        <th scope="col" class="py-3 px-4 rounded-tl-lg whitespace-nowrap">Kode Matkul</th>
-                        <th scope="col" class="py-3 px-4 whitespace-nowrap">Mata Kuliah</th>
-                        <th scope="col" class="py-3 px-4 text-center whitespace-nowrap">SKS</th>
-                        <th scope="col" class="py-3 px-4 rounded-tr-lg text-center whitespace-nowrap">Kelas</th>
-                    </tr>
-                </thead>
-                <tbody id="mata-kuliah-table-body">
-                    <tr><td colspan="4" class="text-center py-4 text-gray-500">Memuat data...</td></tr>
-                </tbody>
-            </table>
-        </div>
+    <div id="kmk-content-container" class="bg-white p-6 md:p-8 rounded-xl shadow-lg">
+        <div class="text-center py-4 text-gray-500">Memuat data...</div>
     </div>
 </main>
 </body>
