--- a/dashboard/mainPage.html
+++ b/dashboard/mainPage.html
@@ -82,6 +82,12 @@
       <span class="text-sm text-gray-500">-anomali bumi</span>
     </p>
   </section>
+  <section class="bg-white p-6 rounded-lg shadow-md mt-6 md:col-span-2 border border-gray-300">
+    <h2 class="text-lg font-semibold text-gray-700 mb-4">Jadwal Kuliah Hari Ini</h2>
+    <div id="jadwal-hari-ini-container">
+        <p class="text-sm text-gray-500 italic">Memuat jadwal...</p>
+    </div>
+</section>
 </div>
     </main>
   </div>
