fetch data tagihan

--- a/dashboard/keuangan/pembayaran.html
+++ b/dashboard/keuangan/pembayaran.html
@@ -7,32 +7,27 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/styles.css">
 </head>
-<main class="flex-1 p-4 md:p-6 lg:p-8">
-    <header class="flex justify-between items-center mb-6">
-        <h1 class="text-xl md:text-2xl font-bold text-gray-800">Tagihan / Pembayaran</h1>
-    </header>
-    
-    <div id="tagihan-content-container" class="bg-white rounded-lg shadow-md overflow-hidden">
-        <div class="p-4 md:p-6 border-b border-gray-200">
-            <h2 class="font-bold text-lg">Daftar Tagihan</h2>
+<main class="flex-1 p-4 md:p-6 lg:p-8 bg-gray-50">
+    <div class="bg-white p-6 rounded-xl shadow-md">
+        <h1 class="text-xl md:text-2xl font-bold mb-4 text-gray-800">Tagihan / Pembayaran</h1>
+
+        <div class="khs-info-mobile">
+            <p class="text-4xl font-extrabold text-blue-900" id="total-tagihan-semester-value">Memuat...</p>
+            <p class="text-sm text-gray-500">Tagihan Semester</p>
         </div>
-        <div id="tagihan-list-container" class="text-center py-4 text-gray-500">Memuat data...</div>
-    </div>
-    
-    <div id="total-summary-mobile-tagihan" class="mt-4 md:hidden bg-white rounded-lg shadow-md">
-         <div class="p-4">
-             <div class="flex justify-between items-center mb-1">
-                <span class="font-bold text-gray-700">Total Tagihan</span>
-                <span id="total-tagihan-value" class="font-semibold text-gray-900">Memuat...</span>
-            </div>
-            <div class="flex justify-between items-center pb-2 border-b border-gray-300">
-                <span class="font-bold text-gray-700">Total Sudah Dibayar</span>
-                <span id="total-dibayar-value" class="font-semibold text-gray-900">Memuat...</span>
-            </div>
-            <div class="flex justify-between items-center pt-2">
-                <span class="font-bold text-gray-700">Total Belum Dibayar</span>
-                <span id="total-belum-dibayar-value" class="text-xl font-extrabold text-blue-900">Memuat...</span>
-            </div>
+
+        <div class="flex items-center justify-center md:justify-start mb-6">
+            <label for="semester-select" class="text-gray-700 font-semibold mr-4">Pilih Semester:</label>
+            <select id="semester-select" class="bg-gray-100 border border-gray-300 rounded-lg px-3 py-1 text-sm focus:outline-none focus:ring-2 focus:ring-blue-200">
+            </select>
+        </div>
+
+        <div class="mb-4 text-sm text-gray-600 khs-info-desktop">
+            <p>Virtual Account: <span id="virtual-account-value" class="font-semibold">Memuat...</span></p>
+        </div>
+
+        <div id="semester-card-container">
+            <p class="text-center py-4 text-gray-500">Memuat data...</p>
         </div>
     </div>
 </main>
